src/styles/content.scss
@import './helpers/mixins';
@import './queue/queue';
@import './queue/queue_share';

a[href='/videos/_dummy_episode_'] {
  &,
  & + div {
    display: none;
  }
}

html.enhancer-fullVideo.page-video {
  #video-player {
    height: 100vh !important;
    width: 100vw !important;
    max-height: 100vh !important;
    min-height: 100vh !important;
    max-width: 100vw !important;
    min-width: 100vw !important;
  }

  #NebulaApp > div:first-of-type {
    position: absolute !important;
    top: 100vh !important;
  }

  #NebulaApp > div:last-child {
    margin-top: 0 !important;
  }

  [aria-label="video description"] {
    margin-top: 96px;
  }
}

.enhancer-creator-settings {
  grid-area: follow / follow-end;
  align-self: center;
  display: flex;
  height: 1.15em;
}

.enhancer-field {
  display: flex;
  gap: 12px;
  align-items: center;

  h3 {
    margin: 0 !important;
  }

  > .enhancer-control, > label {
    flex: 1;
  }
}

.enhancer-rss {
  width: 30px;
  height: 30px;
  grid-area: follow;
  align-self: center;
  margin-left: -40px;
}

div.enhancer-queueButton {
  top: 24px;
  bottom: unset;
  line-height: 0;
  opacity: 0;
  pointer-events: initial;

  &%hover {
    opacity: 1;
  }

  @include hov {
    @extend %hover;

    svg {
      #main {
        fill: white;
        fill: currentcolor;
      }

      #inner {
        fill: none;
      }
    }

    div.text {
      display: inherit;
    }
  }

  $self: &;

  @at-root [data-context-menu-hover-trigger] {
    @include hov {
      #{$self} {
        @extend %hover;
      }
    }
  }

  svg {
    width: 19px;
    height: 19px;
    padding: 3px;
    pointer-events: initial;

    #inner,
    #outline {
      fill: white;
      fill: currentcolor;
    }

    #main {
      fill: none;
    }
  }

  @include mobile {
    opacity: 1;

    div {
      background-color: black;
      color: white;
    }
  }
}

div.nebula-watch-later {
  @include mobile {
    >div {
      background-color: black;
      color: white;
    }

    svg:first-child {
      display: unset;
    }
  }
}

a.enhancer-queueButtonAll {
  svg {
    width: 12px;
    height: 12px;

    #main,
    #outline {
      fill: white;
      fill: currentcolor;
    }
  }
}

.enhancer-hiddenVideo {
  position: relative;

  &::after {
    position: absolute;
    inset: 0;
    padding: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    opacity: 0.75;
  }

  >* {
    opacity: 0.05;
  }
}

.enhancer-yt {
  &-err,
  &-outside {
    display: none !important;
  }

  @media (max-width: $tablet) {
    &-inside {
      display: none !important;
    }

    &-outside {
      display: unset !important;
    }
  }
}

time[datetime] {
  position: relative;

  @include hov {
    .enhancer-datetime {
      display: block;
    }
  }
}

.enhancer-datetime {
  position: absolute;
  top: -2.5em;
  top: calc(-2em - 8px);
  transform: translate(-50%, 0);
  white-space: nowrap;
  padding: 4px 6px;
  border-radius: 2px;
  background-color: black;
  background-color: var(--bg-color);
  border-color: black;
  color: var(--font-color);
  display: none;
  font-size: 0.75rem;

  &::after {
    content: '';
    width: 0;
    height: 0;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-top: 5px solid black;
    border-top: 5px solid var(--bg-color);
    position: absolute;
    left: 50%;
    left: calc(50% - 2.5px);
    bottom: -5px;
  }

  &,
  &::after {
    @include light {
      filter: drop-shadow($shadow_light 0 0 6px);
    }

    @include dark {
      filter: drop-shadow($shadow_dark 0 0 4px);
    }
  }

  @include light {
    border-color: white;
  }
}

div.enhancer-tooltip {
  position: absolute;
  bottom: 60px;
  z-index: 999;
  transform-origin: bottom;

  &.show-anim {
    animation: popup 100ms ease-out normal forwards;
  }

  &.hide-anim {
    animation: popup 100ms ease-in reverse forwards;
  }

  &.hidden {
    display: none;
  }

  @keyframes popup {
    0% {
      transform: scale(0.5);
    }

    100% {
      transform: scale(1);
    }
  }
}

div.enhancer-volume {
  transition: width 0.25s ease-in-out;
  overflow: hidden;
  margin-right: -8px;
  height: 100%;
  margin-left: auto;

  &:not(.volume-conditional),
  #volume-controller-conditional:hover &,
  #volume-controller-conditional:active & {
    width: 3.5em;
  }

  &.volume-conditional {
    width: 0;
  }
}

div#volume-controller-conditional,
div#volume-controller {
  .volume-slider-container {
    transition: opacity 0.4s ease-in-out 0.1s, margin-right 0.2s ease-in-out;
  }

  @media (hover: hover) and (pointer: fine) {
    &:hover, &:active {
      width: calc(120px + 3.5em);

      .volume-slider-container {
        margin-right: calc(3.5em - 8px);
      }
    }
  }
}

div#volume-controller {
  width: calc(33px + 3.5em);

  .volume-slider-container {
    margin-right: calc(3.5em - 8px);
  }
}

div.enhancer-time {
  &.enhancer-hide-remaining .enhancer-time-remaining,
  &.enhancer-hide-current .enhancer-time-current {
    display: none;
  }
}

div.enhancer-queue-control {
  &.disabled {
    pointer-events: none;
    opacity: 0.4;
  }

  &-prev svg {
    transform: scaleX(-1);
  }

  svg {
    height: 16px;
  }

  path {
    fill: currentcolor;
  }
}

div.enhancer-hidden,
button.enhancer-hidden {
  display: none;
}

#top-row {
  position: relative;
}

body > .watch-on-nebula {
  display: none !important;
}

